Fix intro description: 5 tasks should have been 3

--- a/assignment_ecg_classification.ipynb
+++ b/assignment_ecg_classification.ipynb
@@ -12,7 +12,7 @@
     "## Basic Tasks\n",
     "Your task is to implement a classification model, train this model on training data, and evaluate its performance on validation data. We provide skeleton code for the implementation of a simple convolution neural network model.\n",
     "\n",
-    "The steps required to implement this model are presented as numbered tasks below. In total there are six (6) coding tasks and five (5) explanation tasks.\n",
+    "The steps required to implement this model are presented as numbered tasks below. In total there are six (6) coding tasks and three (3) explanation tasks.\n",
     "\n",
     "### GPU Acceleration\n",
     "To be able to use the GPUs provided by colab in order to speed up your computations, you want to check that the `Hardware accelerator` is set to `GPU` under `Runtime > change runtime type`. Note that notebooks run by connecting to virtual machines that have maximum lifetimes that can be as much as 12 hours. Notebooks will also disconnect from VMs when left idle for too long."
